[package]
name = "pure_riff"
description = "A library to parse RIFF data"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/ChocolateLoverRaj/pure_riff"
authors = ["Rajas Paranjpe"]
license = "AGPL-3.0-or-later"
categories = ["no-std", "embedded", "no-std::no-alloc", "parsing"]
keywords = ["riff", "wav"]
include = ["**/*.rs"]

[dependencies]
zerocopy = { version = "0.8.47", features = ["derive"] }
